force-app/main/default/objects/Career_Pathway_Stage__c/Career_Pathway_Stage__c.object-meta.xml
<CustomObject>
    <description>Individual stages in a career pathway</description>
    <label>Career Pathway Stage</label>
    <nameField>
        <label>Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Career Pathway Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>