force-app/main/default/objects/Career_Pathway_Stage__c/fields/Career_Pathway__c.field-meta.xml
<CustomField>
    <fullName>Career_Pathway__c</fullName>
    <description>Parent pathway</description>
    <label>Career Pathway</label>
    <referenceTo>Career_Pathway__c</referenceTo>
    <relationshipLabel>Career Pathway Stages</relationshipLabel>
    <relationshipName>Career_Pathway_Stages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>