force-app/main/default/objects/Career_Pathway_Stage__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>When completed</description>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>