force-app/main/default/objects/Career_Pathway_Stage__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Full stage description</description>
    <label>Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>