force-app/main/default/objects/Career_Pathway_Stage__c/fields/Estimated_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Timeline__c</fullName>
    <description>e.g., &quot;6-12 months&quot;</description>
    <label>Estimated Timeline</label>
    <length>100</length>
    <type>Text</type>
</CustomField>