force-app/main/default/objects/Career_Pathway_Stage__c/fields/Is_Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Currently working on</description>
    <label>Is Current Stage</label>
    <type>Checkbox</type>
</CustomField>