force-app/main/default/objects/Career_Pathway_Stage__c/fields/Milestone_Notes__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Notes__c</fullName>
    <description>Progress notes</description>
    <label>Milestone Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>