force-app/main/default/objects/Career_Pathway_Stage__c/fields/Milestone_Type__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Type__c</fullName>
    <label>Milestone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Role Change</fullName>
            </value>
            <value>
                <fullName>Skill Acquisition</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Experience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>