force-app/main/default/objects/Career_Pathway_Stage__c/fields/Prerequisites__c.field-meta.xml
<CustomField>
    <fullName>Prerequisites__c</fullName>
    <description>What&apos;s needed before this</description>
    <label>Prerequisites</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>