force-app/main/default/objects/Career_Pathway_Stage__c/fields/Skills_To_Acquire__c.field-meta.xml
<CustomField>
    <fullName>Skills_To_Acquire__c</fullName>
    <description>Skills needed for this stage</description>
    <label>Skills To Acquire</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>