force-app/main/default/objects/Career_Pathway_Stage__c/fields/Stage_Number__c.field-meta.xml
<CustomField>
    <fullName>Stage_Number__c</fullName>
    <description>Order (1, 2, 3...)</description>
    <label>Stage Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>