force-app/main/default/objects/Career_Pathway_Stage__c/fields/Stage_Title__c.field-meta.xml
<CustomField>
    <fullName>Stage_Title__c</fullName>
    <description>e.g., &quot;Senior PM at Tech Co&quot;</description>
    <label>Stage Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>