force-app/main/default/objects/Career_Pathway_Stage__c/fields/Started_Date__c.field-meta.xml
<CustomField>
    <fullName>Started_Date__c</fullName>
    <description>When candidate started</description>
    <label>Started Date</label>
    <type>Date</type>
</CustomField>