force-app/main/default/objects/Career_Pathway_Stage__c/fields/Target_Role__c.field-meta.xml
<CustomField>
    <fullName>Target_Role__c</fullName>
    <description>Specific role title</description>
    <label>Target Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>