force-app/main/default/objects/Career_Pathway_Stage__c/fields/Timeline_Months_Min__c.field-meta.xml
<CustomField>
    <fullName>Timeline_Months_Min__c</fullName>
    <description>Minimum months</description>
    <label>Timeline Months Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>