force-app/main/default/objects/Career_Pathway_Stage__c/validationRules/Completion_Date_Required_When_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Completion_Date_Required_When_Complete</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &apos;Completed&apos;),
  ISBLANK( Completed_Date__c )
)</errorConditionFormula>
    <errorDisplayField>Completed_Date__c</errorDisplayField>
    <errorMessage>Completed Date Require When Status is Complete</errorMessage>
</ValidationRule>